--- a/member/templates/index.html
+++ b/member/templates/index.html
@@ -34,7 +34,19 @@
             <h2>안녕하세요! 강남 그린 콤푸타입니다.</h2>
             <div class="img1">
                 <img src="{{ url_for('static', filename='./images/gangnam.jpg') }}">
+                <div class="caption">
+                    <h4>그린컴퓨터 강남점에 대하여...</h4>
+                    <br>
+                    <p> 그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
+                    </p>
+                </div>
             </div>
+
         </section>
         <footer>
 
