--- a/member/static/css/style.css
+++ b/member/static/css/style.css
@@ -13,10 +13,8 @@ nav{float:right; width: 70%; padding-top: 40px;}
 
 /* 주메뉴 */
 #topMenu{height: 60px;}
-/* #topMenu > li{float:left; position: relative;} */
 #topMenu > li{float:left; position: relative; width:150px; height:60px; text-align:center;}
-#topMenu > li > a{display: block; padding: 20px 50px; color: #fff;}
-/* #topMenu > li > a{display: block; padding: 20px 50px; color: #fff;} */
+#topMenu > li > a{display: block; padding: 20px 40px; color: #fff;}
 #topMenu > li > a:hover{color: #444;}
 
 /* 부메뉴 */
@@ -32,7 +30,41 @@ nav{float:right; width: 70%; padding-top: 40px;}
 #main{clear: both; margin: 90px auto;}
 #main .img1{margin: 20px auto; text-align:center;}
 #main .img1 img{border-radius: 10px; overflow: hidden;}
-#main .caption{width:590px; height:320px; background: rgba(0,0,0,0.5);
-             transition:all 0.6s;}
-#main .img1 img:hover .caption{transform:translateY(-324px)}
-#main .img1 .caption{line-height: 2em;}
+
+/* footer 스타일 */
+footer{height: 80px; border-top: 2px solid #222;}
+#bottomMenu{margin: 10px 10px 10px 40px;}
+#bottomMenu li{display: inline-block; margin: 10px 0; padding: 0 10px;
+            border-right: 1px solid #ccc;}
+#bottomMenu li a{color: #444;}
+#bottomMenu li:last-child{border: none;}
+
+/* memberlist 스타일 */
+#memberlist{margin: 40px auto;}
+#memberlist table{width: 700px; margin: 30px auto;}
+#memberlist table, th, td{border: 1px solid #ccc;
+    border-collapse:collapse; text-align: center;}
+#memberlist table th, td{padding: 10px 0;}
+#memberlist table thead{background: #eee;}
+
+/* register 스타일 */
+#register{width: 500px; margin: 40px auto;}
+#register form{margin: 30px auto;}
+#register form ul li{margin: 30px 30px 30px 40px;}
+#register form label{width: 120px; float:left; padding-left: 30px;}
+#register form input[type='text'], input[type='password']{width:200px; height:25px;}
+#register form .radio {width: 40px; padding: 0 15px 0 0;}
+#register form li.button{clear:both; padding-top: 30px; margin-left: 60px;
+    margin-left:150px;}
+#register form input[type='submit'], input[type='reset']{width: 80px; height: 30px;}
+
+/* login 스타일 */
+#login{width: 500px; margin:40px auto;}
+#login form{margin: 40px auto;}
+#login form ul li{margin: 30px 70px;}
+#login form label{width: 100px; float: left;}
+#login form input[type='text'], input[type='password']{width: 200px; height: 25px;}
+#login form input[type='submit']{width: 80px; height:30px;}
+#login form ul li:nth-of-type(3){padding-left: 150px;}
+#login form p.error{text-align: center; color: #f00; font-weight:bold;
+    padding-top: 15px;}
