--- a/member/templates/index.html
+++ b/member/templates/index.html
@@ -8,49 +8,14 @@
 </head>
 <body>
     <div id="container">
-        <header>
-            <div id="logo">
-                <a href="{{ url_for('index') }}"><h1>Gangnum</h1></a>
-            </div>
-            <nav>
-                <ul id="topMenu">
-                    <li><a href="#">회원</a>
-                        <ul>
-                            <li><a href="">회원 가입</a></li>
-                            <li><a href="">회원 목록</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">게시판</a>
-                        <ul>
-                            <li><a href="">글목록</a></li>
-                            <li><a href="">글쓰기</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">로그인</a></li>
-                </ul>
-            </nav>
-        </header>
+        {% include 'header.html' %}
         <section id="main">
-            <h2>안녕하세요! 강남 그린 콤푸타입니다.</h2>
+            <h2>안녕하세요! 강남 그린 콤퓨타입니다.</h2>
             <div class="img1">
                 <img src="{{ url_for('static', filename='./images/gangnam.jpg') }}">
-                <div class="caption">
-                    <h4>그린컴퓨터 강남점에 대하여...</h4>
-                    <br>
-                    <p> 그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                        그린컴퓨터 강남점은 어쩌구저쩌구~ 유구한 전통과 역사를 가진~
-                    </p>
-                </div>
             </div>
-
         </section>
-        <footer>
-
-        </footer>
+        {% include 'footer.html' %}
     </div>
 </body>
 </html>
