--- a/member/static/css/style.css
+++ b/member/static/css/style.css
@@ -30,6 +30,7 @@ nav{float:right; width: 70%; padding-top: 40px;}
 #main{clear: both; margin: 90px auto;}
 #main .img1{margin: 20px auto; text-align:center;}
 #main .img1 img{border-radius: 10px; overflow: hidden;}
+#main #demo{text-align: center;}
 
 /* footer 스타일 */
 footer{height: 80px; border-top: 2px solid #222;}
@@ -50,13 +51,14 @@ footer{height: 80px; border-top: 2px solid #222;}
 /* register 스타일 */
 #register{width: 500px; margin: 40px auto;}
 #register form{margin: 30px auto;}
-#register form ul li{margin: 30px 30px 30px 40px;}
+#register form ul li{margin: 30px 20px;}
 #register form label{width: 120px; float:left; padding-left: 30px;}
-#register form input[type='text'], input[type='password']{width:200px; height:25px;}
+#register form input[type='text']{width:280px; height:25px;}
+#register form input[type='password']{width:280px; height:25px;}
 #register form .radio {width: 40px; padding: 0 15px 0 0;}
 #register form li.button{clear:both; padding-top: 30px; margin-left: 60px;
     margin-left:150px;}
-#register form input[type='submit'], input[type='reset']{width: 80px; height: 30px;}
+#register form input[type='button'],input[type='reset']{width: 80px; height: 30px;}
 
 /* login 스타일 */
 #login{width: 500px; margin:40px auto;}
