--- a/member/templates/header.html
+++ b/member/templates/header.html
@@ -7,7 +7,7 @@
 <body>
         <header>
             <div id="logo">
-                <a href="{{ url_for('index') }}"><h1>Gangnum</h1></a>
+                <a href="{{ url_for('index') }}"><h1>Gangnam</h1></a>
             </div>
             <nav>
                 <ul id="topMenu">
