--- a/member/templates/index.html
+++ b/member/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>강남 커뮤니티입니다.</title>
     <link rel="stylesheet"
           href="{{ url_for('static', filename='css/style.css') }}">
@@ -10,6 +11,10 @@
 <body>
     <div id="container">
         {% include 'header.html' %}
+        <!-- 배경 이미지 !-->
+        <div id="main_pic">
+            <img src="{{ url_for('static', filename='./images/header1.jpg') }}">
+        </div>
         <section id="main">
             <h2>안녕하세요! 강남 그린 콤퓨타입니다.</h2>
             <div class="img1">
