--- a/member/static/css/style.css
+++ b/member/static/css/style.css
@@ -44,33 +44,35 @@ footer{height: 80px; border-top: 2px solid #222;}
 #bottomMenu li:last-child{border: none;}
 
 /* memberlist 스타일 */
-#memberlist{margin: 40px auto;}
-#memberlist table{width: 700px; margin: 30px auto;}
+#memberlist{width: 450px; margin: 40px auto 100px;}
+#memberlist table{width: 450px; margin: 40px auto;}
 #memberlist table, th, td{border: 1px solid #ccc;
     border-collapse:collapse; text-align: center;}
-#memberlist table th, td{padding: 10px 0;}
+#memberlist table th, td{padding: 10px 0; font-size:0.9em;}
 #memberlist table thead{background: #eee;}
 
 /* register 스타일 */
-#register{width: 500px; margin: 40px auto;}
-#register form{margin: 30px auto;}
-#register form ul li{margin: 30px 20px;}
-#register form label{width: 120px; float:left; padding-left: 30px;}
-#register form input[type='text']{width:280px; height:25px;}
-#register form input[type='password']{width:280px; height:25px;}
+#register{width: 400px; margin: 30px auto 100px;}
+#register form{margin: 20px auto;}
+#register form ul li{margin: 20px;}
+#register form ul li:nth-of-type(6){text-align: center; margin: 20px 0;}
+#register form label{width: 120px; float:left; padding-left: 10px;
+    margin-right:10px;}
+#register form input[type='text']{width:210px; height:25px;}
+#register form input[type='password']{width:210px; height:25px;}
 #register form .radio {width: 40px; padding: 0 15px 0 0;}
 #register form li.button{clear:both; padding-top: 30px; margin-left: 60px;
     margin-left:150px;}
 #register form input[type='button'],input[type='reset']{width: 80px; height: 30px;}
 
 /* login 스타일 */
-#login{width: 500px; margin:40px auto;}
+#login{width: 400px; margin:40px auto 100px;}
 #login form{margin: 40px auto;}
-#login form ul li{margin: 30px 70px;}
+#login form ul li{margin: 30px 40px;}
 #login form label{width: 100px; float: left;}
 #login form input[type='text'], input[type='password']{width: 200px; height: 25px;}
 #login form input[type='submit']{width: 80px; height:30px;}
-#login form ul li:nth-of-type(3){padding-left: 150px;}
+#login form ul li:nth-of-type(3){padding-left: 200px;}
 #login form p.error{text-align: center; color: #f00; font-weight:bold;
     padding-top: 15px;}
 
@@ -87,11 +89,29 @@ footer{height: 80px; border-top: 2px solid #222;}
     #main h2{font-size: 1.4em;}
     #main .img1 img{border-radius: 5px; width: 380px;}
     #bottomMenu{margin: 10px 10px 10px 50px;}
+
+    /* register 스타일 */
+    #register{width: 450px; margin: 30px auto 100px;}
+    #register form{margin: 30px auto;}
+    #register form ul li{margin: 30px;}
+    #register form label{width: 120px; float:left; padding-left: 20px;
+        margin-right: 10px;}
+
+    /* memberlist 스타일 */
+    #memberlist{width: 550px; margin: 40px auto 100px;}
+    #memberlist table{width: 550px; margin: 40px auto;}
+
+    /* login 스타일 */
+    #login{width: 450px; margin:40px auto 100px;}
+    #login form{margin: 40px auto;}
+    #login form ul li{margin: 35px 50px;}
+    #login form ul li:nth-of-type(3){padding-left: 200px;}
 }
 
 /* PC 기준 - 1100px 이상 */
 @media screen and (min-width: 1100px){
     #container{width: 1100px; margin:0 auto;}
+
     /* header 스타일 */
     #logo h1{color:#eee; padding-left: 30px; font-size: 1.9em; font-style: italic;}
     #topMenu > li > a{display: block; padding: 40px 10px 40px 150px; color: #eee;}
@@ -105,4 +125,22 @@ footer{height: 80px; border-top: 2px solid #222;}
     #main .img1 img{border-radius: 5px; width: 400px;}
     #bottomMenu{margin: 10px 10px 10px 60px;}
 
+    /* register 스타일 */
+    #register{width: 500px; margin: 30px auto 100px;}
+    #register form{margin: 30px auto;}
+    #register form ul li{margin: 35px;}
+    #register form label{width: 120px; float:left; padding-left: 30px;
+        margin-right: 20px;}
+
+    /* memberlist 스타일 */
+    #memberlist{width: 600px; margin: 40px auto 100px;}
+    #memberlist table{width: 600px; margin: 40px auto;}
+
+    /* login 스타일 */
+    #login{width: 500px; margin:40px auto 100px;}
+    #login form{margin: 40px auto;}
+    #login form ul li{margin: 40px 80px;}
+    #login form ul li:nth-of-type(3){padding-left: 200px;}
+    #login form p.error{text-align: center; color: #f00; font-weight:bold;
+    padding-top: 20px;}
 }
