--- a/member/static/css/style.css
+++ b/member/static/css/style.css
@@ -9,20 +9,22 @@ ul li{list-style: none;}
 /* header 스타일 */
 header{width: 100%; height: 100px; background:#0088cc; }
 #logo{float:left; width: 30%; line-height: 100px; text-align: left;}
-#logo h1{color:#eee; padding-left: 10px; font-size: 1.6em; font-style: italic;}
+#logo h1{color:#eee; padding-left: 10px; font-size: 1.4em; font-style: italic;}
 nav{float:right; width: 70%; height: 100px;}
+#topMenu > li > a > .session{color: #ff0; font-size: 0.9em;}
 
 /* 주메뉴 */
-#topMenu{height: 60px;}
+#topMenu{height: 60px; padding-left: 20px;}
 #topMenu > li{float:left; position: relative; text-align:center;}
-#topMenu > li > a{display: block; padding: 40px 00px 40px 50px; color: #eee;}
+#topMenu > li > a{display: block; padding: 40px 10px; color: #eee;
+    font-size: 0.9em;}
 #topMenu > li > a:hover{color: #444;}
 
 /* 부메뉴 */
-#topMenu > li > ul{position: absolute; display: none;
-        width: 140px; top: 100px; background: rgba(246,248,213,0.6);}
+#topMenu > li > ul{position: absolute; display: none; width: 130px;
+         top: 100px; left: -30px; background: rgba(246,248,213,0.6);}
 #topMenu > li:hover > ul{display: block;}
-#topMenu > li > ul > li{padding: 10px 30px; text-align:center;}
+#topMenu > li > ul > li{padding: 10px 20px; text-align:center;}
 #topMenu > li > ul > li > a{font-size: 14px; padding: 5px; color: #000;}
 #topMenu > li > ul > li > a:hover{color: red;}
 
@@ -76,13 +78,25 @@ footer{height: 80px; border-top: 2px solid #222;}
 #login form p.error{text-align: center; color: #f00; font-weight:bold;
     padding-top: 15px;}
 
+/* boardlist 스타일 */
+#boardlist{width: 450px; margin: 40px auto 100px;}
+#boardlist table{width: 450px; margin: 30px auto;}
+#boardlist table, th, td{border: 1px solid #ccc; border-collapse: collapse;}
+#boardlist table th, td{padding: 10px 0; font-size:0.9em;}
+#boardlist table thead{background: #eee;}
+#boardlist .btnWrite{text-align: right; margin-right: 10px;}
+#boardlist .btnWrite button{padding: 10px;}
+
 /* 태블릿 기준 - 780px 이상 */
 @media screen and (min-width: 780px){
     /* header 스타일 */
-    #logo h1{color:#eee; padding-left: 20px; font-size: 1.8em; font-style: italic;}
-    #topMenu > li > a{display: block; padding: 40px 10px 40px 100px; color: #eee;}
+    #logo h1{color:#eee; padding-left: 20px; font-size: 1.6em; font-style: italic;}
+    #topMenu{height: 60px; padding-left: 60px;}
+    #topMenu > li > a{display: block; padding: 40px 30px; color: #eee;
+        font-size: 1em;}
     #topMenu > li > ul{position: absolute; display: none;
-        width: 140px; top: 100px; left:50px; background: rgba(246,248,213,0.6);}
+        width: 140px; top: 100px; left:-10px; background: rgba(246,248,213,0.6);}
+    #topMenu > li > a > .session{color: #ff0; font-size: 0.9em;}
 
     /* main 스타일 */
     #main_pic img{width: 100%; height:260px;}
@@ -106,6 +120,10 @@ footer{height: 80px; border-top: 2px solid #222;}
     #login form{margin: 40px auto;}
     #login form ul li{margin: 35px 50px;}
     #login form ul li:nth-of-type(3){padding-left: 200px;}
+
+    /* boardlist 스타일 */
+    #boardlist{width: 550px; margin: 40px auto 100px;}
+    #boardlist table{width: 550px; margin: 30px auto;}
 }
 
 /* PC 기준 - 1100px 이상 */
@@ -113,10 +131,11 @@ footer{height: 80px; border-top: 2px solid #222;}
     #container{width: 1100px; margin:0 auto;}
 
     /* header 스타일 */
-    #logo h1{color:#eee; padding-left: 30px; font-size: 1.9em; font-style: italic;}
-    #topMenu > li > a{display: block; padding: 40px 10px 40px 150px; color: #eee;}
+    #logo h1{color:#eee; padding-left: 30px; font-size: 1.8em; font-style: italic;}
+    #topMenu{height: 60px; padding-left: 100px;}
+    #topMenu > li > a{display: block; padding: 40px 50px; color: #eee;}
     #topMenu > li > ul{position: absolute; display: none;
-        width: 140px; top: 100px; left: 100px; background: rgba(246,248,213,0.6);}
+        width: 140px; top: 100px; left: 0px; background: rgba(246,248,213,0.6);}
 
     /* main 스타일 */
     #main{clear: both; margin: 40px auto 100px; text-align: center;}
@@ -143,4 +162,9 @@ footer{height: 80px; border-top: 2px solid #222;}
     #login form ul li:nth-of-type(3){padding-left: 200px;}
     #login form p.error{text-align: center; color: #f00; font-weight:bold;
     padding-top: 20px;}
+
+    /* boardlist 스타일 */
+    #boardlist{width: 650px; margin: 40px auto 100px;}
+    #boardlist table{width: 650px; margin: 30px auto;}
+    #boardlist table th, td{padding: 10px 0; font-size:1em;}
 }
