--- a/member/templates/detail.html
+++ b/member/templates/detail.html
@@ -19,17 +19,17 @@
                 <tbody>
                     <tr>
                         <td>
-                            <input type="text" name="title" value="{{ board[1] }}">
+                            <input type="text" name="title" value="{{ board[1] }}" readonly>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <textarea name="content">{{ board[2] }}</textarea>
+                            <textarea name="content" readonly>{{ board[2] }}</textarea>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" name="memberid" value="글쓴이 : {{ board[5] }}">
+                            <input type="text" name="memberid" value="글쓴이 : {{ board[5] }}" readonly>
                         </td>
                     </tr>
                     <tr>
@@ -37,6 +37,7 @@
                             <a href="{{ url_for('boardlist') }}">
                             <button type="button">글목록</button>
                             {% if session['userid'] == board[5] %}
+                            <a href="{{ url_for('update', bno=board[0]) }}"> <button type="button">수정</button> </a>
                             </a>
                             <!-- 로그인한 사람과 글쓴이가 같으면 삭제, 수정 버튼 보이고, 아니면 보이지 않음 !-->
                             <a onclick="return confirm('정말로 삭제하시겠습니까?')"
