--- a/member/templates/writing.html
+++ b/member/templates/writing.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div id="container">
-         {% include 'header.html' %}
+        {% if not session %}
+            <script>
+                alert("로그인을 해주세요");
+                location.href="http://127.0.0.1:5000/login";
+            </script>
+        {% endif %}
+        {% include 'header.html' %}
         <div id="main_pic">
             <img src="{{ url_for('static', filename='./images/header1.jpg') }}" id="pic">
         </div>
