--- a/member/static/css/style.css
+++ b/member/static/css/style.css
@@ -83,34 +83,38 @@ footer{height: 80px; border-top: 2px solid #222;}
 #boardlist table{width: 460px; margin: 30px auto;}
 #boardlist table, th, td{border: 1px solid #ccc; border-collapse: collapse;}
 #boardlist table th, td{padding: 10px 5px; font-size:0.7em;}
-#boardlist table td:nth-of-type(2){text-align: left; padding-left: 5px;}
+#boardlist table td:nth-of-type(2){text-align: left; padding-left: 10px;}
 #boardlist table thead{background: #eee;}
 #boardlist .btnWrite{text-align: right; margin-right: 10px;}
 #boardlist .btnWrite button{padding: 10px;}
 
 /* writing 스타일 */
 #writing{width: 450px; margin:40px auto 100px;}
-#writing table{width: 450px; margin: 30px auto;}
+#writing table{width: 450px; margin: 40px auto;}
 #writing table, td{border: 1px solid #ccc; border-collapse: collapse;}
-#writing table input[type='text']{width: 430px; height: 25px;}
-#writing textarea{width: 430px; height: 300px;}
+#writing table input[type='text']{width: 420px; height: 25px; padding: 5px;}
+#writing textarea{width: 420px; height: 300px; padding: 5px; line-height: 1.5;
+    resize: none; font-family: "궁서체";}
 #writing table input[type='submit'], input[type='reset']{width: 80px; height: 30px;}
 
 /* detail 스타일 */
 #detail{width: 450px; margin: 40px auto 100px;}
 #detail table{width: 450px; margin: 40px auto;}
 #detail table, td{border: 1px solid #ccc; border-collapse: collapse;}
-#detail table input[type='text']{width: 430px; height: 25px;}
-#detail textarea{width: 430px; height: 300px;}
+#detail table input[type='text']{width: 420px; height: 25px; padding: 5px;}
+#detail textarea{width: 420px; height: 300px; padding: 5px; line-height: 1.5;
+    resize: none; font-family: "궁서체";}
 #detail table button[type='button']{width: 80px; height: 30px;}
 
 /* update 스타일 */
 #update{width: 450px; margin: 40px auto 100px;}
 #update table{width: 450px; margin: 40px auto;}
 #update table, td{border: 1px solid #ccc; border-collapse: collapse;}
-#update table input[type='text']{width: 430px; height: 25px;}
-#update textarea{width: 430px; height: 300px;}
-#update table input[type='submit'], input[type='reset']{width: 80px; height: 30px;}
+#update table input[type='text']{width: 420px; height: 25px; padding: 5px;}
+#update textarea{width: 420px; height: 300px; padding: 5px; line-height: 1.5;
+    resize: none; font-family: "궁서체";}
+#update table input[type='submit']{width: 80px; height: 30px;}
+#update table input[type='reset']{width: 80px; height: 30px;}
 
 
 /* 태블릿 기준 - 780px 이상 */
@@ -155,9 +159,20 @@ footer{height: 80px; border-top: 2px solid #222;}
     /* writing 스타일 */
     #writing{width: 550px; margin:40px auto 100px;}
     #writing table{width: 550px; margin: 30px auto;}
-    #writing table input[type='text']{width: 530px; height: 25px;}
-    #writing textarea{width: 530px; height: 350px;}
+    #writing table input[type='text']{width: 520px; height: 25px; padding: 5px;}
+    #writing textarea{width: 520px; height: 350px; padding: 5px; line-height: 1.5;}
 
+    /* detail 스타일 */
+    #detail{width: 550px; margin:40px auto 100px;}
+    #detail table{width: 550px; margin: 30px auto;}
+    #detail table input[type='text']{width: 520px; height: 25px; padding: 5px;}
+    #detail textarea{width: 520px; height: 350px; padding: 5px; line-height: 1.5;}
+
+    /* update 스타일 */
+    #update{width: 550px; margin:40px auto 100px;}
+    #update table{width: 550px; margin: 30px auto;}
+    #update table input[type='text']{width: 520px; height: 25px; padding: 5px;}
+    #update textarea{width: 520px; height: 350px; padding: 5px; line-height: 1.5;}
 }
 
 
@@ -206,7 +221,25 @@ footer{height: 80px; border-top: 2px solid #222;}
     /* writing 스타일 */
     #writing{width: 650px; margin:40px auto 100px;}
     #writing table{width: 650px; margin: 30px auto;}
-    #writing table input[type='text']{width: 630px; height: 25px;}
-    #writing textarea{width: 630px; height: 350px;}
-    #writing table input[type='submit'], input[type='reset']{width: 90px; height: 35px;}
+    #writing table input[type='text']{width: 620px; height: 25px; padding: 5px;}
+    #writing textarea{width: 620px; height: 350px; padding: 5px; line-height: 1.5;}
+    #writing table input[type='submit']{width: 90px; height: 35px;}
+    #writing table input[type='reset']{width: 90px; height: 35px;}
+
+    /* detail 스타일 */
+    #detail{width: 650px; margin:40px auto 100px;}
+    #detail table{width: 650px; margin: 30px auto;}
+    #detail table input[type='text']{width: 620px; height: 25px; padding: 5px;}
+    #detail textarea{width: 620px; height: 350px; padding: 5px; line-height: 1.5;}
+    #detail table input[type='submit']{width: 90px; height: 35px;}
+    #detail table input[type='reset']{width: 90px; height: 35px;}
+
+    /* update 스타일 */
+    #update{width: 650px; margin:40px auto 100px;}
+    #update table{width: 650px; margin: 30px auto;}
+    #update table input[type='text']{width: 620px; height: 25px; padding: 5px;}
+    #update textarea{width: 620px; height: 350px; padding: 5px; line-height: 1.5;}
+    #update table input[type='submit']{width: 90px; height: 35px;}
+    #update table input[type='reset']{width: 90px; height: 35px;}
 }
+
