--- a/member/templates/detail.html
+++ b/member/templates/detail.html
@@ -29,14 +29,15 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" name="memberid" value="글쓴이 : {{ board[5] }}" readonly>
+                            <input type="text" name="memberid" value="글쓴이 : {{ board[6] }} {% if board[4] %}(수정일 : {{ board[4] }})
+                                    {% else %}(작성일 : {{ board[3] }}) {% endif %}" readonly>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="{{ url_for('boardlist') }}">
                             <button type="button">글목록</button>
-                            {% if session['userid'] == board[5] %}
+                            {% if session['userid'] == board[6] %}
                             <a href="{{ url_for('update', bno=board[0]) }}"> <button type="button">수정</button> </a>
                             </a>
                             <!-- 로그인한 사람과 글쓴이가 같으면 삭제, 수정 버튼 보이고, 아니면 보이지 않음 !-->
